fix: only on mobile

--- a/src/client/components/MyNotifications/MyNotifications.module.scss
+++ b/src/client/components/MyNotifications/MyNotifications.module.scss
@@ -4,8 +4,10 @@
   @include reset-list-style;
 }
 
-.MarginBottom {
-  margin-bottom: 3rem !important;
+.MarginBottomMobile {
+  @include mq-phone() {
+    margin-bottom: 3rem !important;
+  }
 }
 
 .MyNotificationItem {
